crates/structurizr-analysis/tests/snapshots/document_snapshots__document_snapshot@relationships__named_relationships_ok.snap
---
source: crates/structurizr-analysis/tests/document_snapshots.rs
expression: "SnapshotView::from(&snapshot)"
---
SnapshotView {
    has_syntax_errors: false,
    diagnostics: [],
    include_directives: [],
    identifier_modes: [],
    symbols: [
        Symbol {
            id: SymbolId(
                0,
            ),
            kind: Person,
            display_name: "User",
            binding_name: Some(
                "user",
            ),
            span: TextSpan {
                start_byte: 32,
                end_byte: 52,
                start_point: TextPoint {
                    row: 2,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 2,
                    column: 28,
                },
            },
            parent: None,
            syntax_node_kind: "person",
        },
        Symbol {
            id: SymbolId(
                1,
            ),
            kind: SoftwareSystem,
            display_name: "System",
            binding_name: Some(
                "system",
            ),
            span: TextSpan {
                start_byte: 61,
                end_byte: 93,
                start_point: TextPoint {
                    row: 3,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 3,
                    column: 40,
                },
            },
            parent: None,
            syntax_node_kind: "software_system",
        },
        Symbol {
            id: SymbolId(
                2,
            ),
            kind: Relationship,
            display_name: "Uses",
            binding_name: Some(
                "rel",
            ),
            span: TextSpan {
                start_byte: 103,
                end_byte: 130,
                start_point: TextPoint {
                    row: 5,
                    column: 8,
                },
                end_point: TextPoint {
                    row: 5,
                    column: 35,
                },
            },
            parent: None,
            syntax_node_kind: "relationship",
        },
    ],
    references: [
        Reference {
            kind: RelationshipSource,
            raw_text: "user",
            span: TextSpan {
                start_byte: 109,
                end_byte: 113,
                start_point: TextPoint {
                    row: 5,
                    column: 14,
                },
                end_point: TextPoint {
                    row: 5,
                    column: 18,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: Some(
                SymbolId(
                    2,
                ),
            ),
        },
        Reference {
            kind: RelationshipDestination,
            raw_text: "system",
            span: TextSpan {
                start_byte: 117,
                end_byte: 123,
                start_point: TextPoint {
                    row: 5,
                    column: 22,
                },
                end_point: TextPoint {
                    row: 5,
                    column: 28,
                },
            },
            target_hint: Element,
            container_node_kind: "relationship",
            containing_symbol: Some(
                SymbolId(
                    2,
                ),
            ),
        },
        Reference {
            kind: ViewInclude,
            raw_text: "rel",
            span: TextSpan {
                start_byte: 196,
                end_byte: 199,
                start_point: TextPoint {
                    row: 10,
                    column: 20,
                },
                end_point: TextPoint {
                    row: 10,
                    column: 23,
                },
            },
            target_hint: ElementOrRelationship,
            container_node_kind: "system_landscape_view",
            containing_symbol: None,
        },
    ],
}
